<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:padding="30dip" 
    android:background="@drawable/gradient">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" 
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_marginBottom="20dip"/>
    
    <Button android:id="@+id/button1"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/play" />
    
    <Button android:id="@+id/button2"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/config" />
    
    <Button android:id="@+id/button3"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/about" />
    
    <Button android:id="@+id/button4"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/exit" />

</LinearLayout>